# daily-real

./: .env.example  .gitignore  README.md  api.http  docker-compose.yaml  hello.py  pyproject.toml  pytest.ini
app/: main.py
app/id/public/: get_user_by_token.py  user_by_token.py
app/id/user/: _auth.py  _get_profile.py  _post_register.py  _post_token.py  _repository.py  _user.py  route.py
app/id/user_context/: auth.py  get_profile.py  post_register.py  post_token.py  repository.py  route.py  user.py
app/infra/: database.py
app/movement/account/: __init__.py  _account.py  _account_create.py  _account_response.py  _get_accounts.py  _post_register.py  route.py
app/moviment/: __init__.py
app/moviment/account_context/: _account.py
app/util/: exceptions.py
tests/: README.md  conftest.py
tests/fixtures/: test_data.py
tests/integration/: test_user_endpoints.py
tests/integration/movement/account/: test_post_register.py
tests/integration/user/: test_get_profile.py  test_post_register.py  test_post_token.py
tests/utils/: helpers.py
